[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Components/RewardLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Components/IconCapsule.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Icons/Arrow - Right W.png" type="Texture" id=3]
[ext_resource path="res://UI/ListEntry.gd" type="Script" id=4]
[ext_resource path="res://UI/theme/style_box_empty.tres" type="StyleBox" id=5]
[ext_resource path="res://UI/typography/Button_Label.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/ListEntry.tres" type="StyleBox" id=7]
[ext_resource path="res://Network/DefaultReward.tres" type="Resource" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 1024
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.184314 )
shadow_size = 5

[node name="ListEntry" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 0.096
margin_bottom = -0.320007
mouse_filter = 1
mouse_default_cursor_shape = 8
custom_styles/panel = ExtResource( 7 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
navigation_payload = {
}

[node name="Button" type="Button" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1080.0
margin_bottom = 184.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1080.0
margin_bottom = 184.0
mouse_filter = 2
mouse_default_cursor_shape = 3
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_top = 5.0
margin_right = 1076.0
margin_bottom = 175.0
mouse_filter = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
margin_right = 5.0
margin_bottom = 170.0
mouse_filter = 2
custom_styles/separator = ExtResource( 5 )
custom_constants/separation = 5

[node name="IconContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 9.0
margin_right = 179.0
margin_bottom = 170.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/IconContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 165.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Capsule" parent="MarginContainer/HBoxContainer/IconContainer/CenterContainer" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 160.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/HBoxContainer"]
margin_left = 183.0
margin_right = 212.0
margin_bottom = 170.0
mouse_filter = 2
custom_styles/separator = ExtResource( 5 )
custom_constants/separation = 29

[node name="ContentContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 216.0
margin_right = 911.0
margin_bottom = 170.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ContentContainer"]
margin_right = 695.0
margin_bottom = 170.0
mouse_filter = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/ContentContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 695.0
margin_bottom = 118.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 6 )
fit_content_height = true

[node name="RewardLabel" parent="MarginContainer/HBoxContainer/ContentContainer/VBoxContainer" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 661.0
margin_top = 53.0
margin_right = 661.0
margin_bottom = 96.0
size_flags_horizontal = 8
_reward = ExtResource( 8 )

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/HBoxContainer"]
margin_left = 915.0
margin_right = 944.0
margin_bottom = 170.0
mouse_filter = 2
custom_styles/separator = ExtResource( 5 )
custom_constants/separation = 29

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 948.0
margin_right = 1068.0
margin_bottom = 170.0
rect_min_size = Vector2( 120, 120 )
mouse_filter = 2
custom_styles/panel = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer"]
margin_right = 120.0
margin_bottom = 170.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator4" type="VSeparator" parent="MarginContainer/HBoxContainer"]
margin_left = 1072.0
margin_right = 1076.0
margin_bottom = 170.0
mouse_filter = 2
custom_styles/separator = ExtResource( 5 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
